<resources>
    <string name="app_name">Tư Vấn Tuyển Sinh</string>
    <string name="username">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="fullname">Họ và tên</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="logout">ĐĂNG XUẤT</string>
    <string name="register">ĐĂNG KÝ</string>
    <string name="backtologin">Quay lại Đăng nhập</string>
    <string name="enteryourfullname">Vui lòng nhập Họ và tên</string>
    <string name="enteryourusername">Vui lòng nhập Tên người dùng</string>
    <string name="enteryouremail">Vui lòng nhập Email</string>
    <string name="enteryourpassword">Vui lòng nhập Mật khẩu</string>
    <string name="enterpasswordagain">Vui lòng nhập Mật khẩu lần nữa</string>
    <string name="passwordtooshort">Độ dài mật khẩu tổi thiểu là 6 ký tự</string>
    <string name="gotoregister">Tạo một tài khoản mới</string>
    <string name="authfailed">Tài khoản hoặc mật khẩu chưa chính xác!</string>
    <string name="gotohome">Trở về Trang chủ</string>
    <string name="exit_confirm">Nhấn BACK lần nữa để thoát!</string>
    <string name="exit">Thoát</string>
    <string name="success_logout">Đã đăng xuất!</string>
    <string name="success_login">Đăng nhập thành công!</string>
    <string name="cntt">Công nghệ thông tin</string>
    <string name="ktnn">Kinh tế Nông nghiệp</string>
    <string name="ktxd">Kỹ thuật xây dựng</string>
    <string name="lhc">Luật-Chuyên ngành Luật hành chính</string>
    <string name="nna">Ngôn ngữ Anh</string>
    <string name="qtkd">Quản trị kinh doanh</string>
    <string name="vnh">Việt Nam học-Chuyên ngành Hướng dẫn viên Du lịch</string>
    <string name="kdnn">Kinh doanh nông nghiệp</string>
    <string name="chuandaura"><![CDATA[→ Chuẩn đầu ra]]></string>
    <string name="title_vnh">Việt Nam học - HA</string>
    <string name="thongtinchung_vnh"><![CDATA[<p style=\"margin-top: 4pt; text-align: justify;\"><span style=\"font-family: Arial;\"> <span lang=\"EN-US\">- Tên ngành:<strong> Việt Nam học</strong></span></span></p> <p style=\"margin-top: 4pt; text-align: justify;\"><span style=\"font-family: Arial;\"> <span lang=\"EN-US\">- Tên chuyên ngành: <strong>Hướng dẫn viên du lịch</strong></span></span></p> <p style=\"margin-top: 4pt; text-align: justify;\"><span style=\"font-family: Arial;\"> <span lang=\"EN-US\">- Mã ngành tuyển sinh: <strong>7310630H</strong> (Đào tạo tại Khu Hòa An)</span></span></p> <p class=\"MsoNormal\" style=\"margin-top: 4pt; text-align: justify;\"><span style=\"font-family: Arial;\"> <span lang=\"EN-US\">- Tổ hợp xét tuyển: Văn-Sử-Địa (C00), Toán-Văn-Tiếng Anh (D01), Văn-Sử-Tiếng Anh (D14), Văn-Địa-Tiếng Anh (D15)</span></span></p> <p style=\"margin-top: 4pt; text-align: justify;\"><span style=\"font-family: Arial;\"> <span lang=\"EN-US\">- Tên ngành được in trên bằng tốt nghiệp, bảng điểm và quyết định tốt nghiệp; Tên chuyên ngành được in trên bảng điểm và quyết định tốt nghiệp.</span></span></p>]]></string>
    <string name="gioithieu_vnh"><![CDATA[<p style=\"margin-top: 4pt; text-align: justify;\"><span style=\"font-family: Arial;\"><b> <span lang=\"EN-US\">- </span></b><span lang=\"EN-US\">Chuyên ngành Hướng dẫn viên du lịch đào tạo cử nhân có khả năng hướng dẫn du khách nội địa và quốc tế; điều hành và kinh doanh du lịch; lễ tân trong lĩnh vực nhà hàng, khách sạn.</span></span></p> <p style=\"margin-top: 4pt; text-align: justify;\"><span style=\"font-family: Arial;\"> <span lang=\"EN-US\">- Sinh viên được học kiến thức và kỹ năng chung về du lịch và chuyên sâu về hướng dẫn viên du lịch như: tâm lý du khách, thủ tục hải quan xuất nhập cảnh, thiết kế và điều hành tour, tuyến điểm du lịch, tổ chức sự kiện, ứng dụng công nghệ thông tin trong du lịch, nghiệp vụ nhà hàng khách sạn, kỹ năng giao tiếp và thuyết trình, nghiệp vụ hướng dẫn du lịch và một số học phấn khác có liên quan đến du lịch.</span></span></p>]]></string>
    <string name="vitrivieclam_vnh"><![CDATA[<p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Hướng dẫn viên, nhân viên kinh doanh, điều hành du lịch;</span></span></p> <p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Nhân viên lễ tân nhà hàng, khách sạn;</span></span></p> <p class=\"MsoNormal\" style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Giảng dạy chuyên ngành Hướng dẫn du lịch tại các trường đại học, cao đẳng;</span></span></p> <p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Công chức/viên chức tại các cơ quan quản lý nhà nước về văn hóa và du lịch; </span></span></p> <p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Nhân viên tại các khu/điểm du lịch;</span></span></p> <p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Hướng dẫn viên du lịch tự do;</span></span></p> <p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Nhân viên điều hành và tổ chức sự kiện và teambuilding;</span></span></p> <p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Nhân viên lễ tân trong các doanh nghiệp du lịch.</span></span></p>]]></string>
    <string name="noilamviec_vnh"><![CDATA[<p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Tại các công ty du lịch lữ hành (Saigon Tourist, Fiditour, TST Tourist, Viettravel, HT Travel, Benthanh Tourist, Cantho Tourist,…).</span></span></p> <p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Tại nhà hàng và khách sạn (khách sạn Quốc tế, khách sạn Ninh Kiều, khách sạn Cửu Long, khách sạn Mường Thanh, khách sạn Golf, khách sạn Vinpearl…)</span></span></p> <p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Tại các trường đại học, cao đẳng (Đại học Tây Đô, Đại học An Giang, Đại học Trà Vinh, Đại học Đồng Tháp, Đại học Cửu Long, Đại học Bạc Liêu, Cao đẳng Cần Thơ, Cao đẳng Du lịch Cần Thơ, Cao đẳng Kinh tế - Kỹ thuật Kiên Giang,…).</span></span></p> <p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Tại các cơ quan quản lý nhà nước về văn hóa và du lịch (Các Sở Du lịch hoặc Sở Văn hóa, Thể thao và Du lịch ở các tỉnh, thành trong cả nước).</span></span></p> <p class=\"MsoNormal\" style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Tại các khu/điểm du lịch (làng du lịch Mỹ Khánh, khu du lịch Cồn Phụng, cụm du lịch Cái Bè, khu du lịch Núi Cấm, khu du lịch Xẻo Quýt,…).</span></span></p> <p style=\"margin-top: 4.0pt; text-align: justify;\"><span style=\"font-family: Arial;\"><span lang=\"EN-US\">- Tại các công ty tổ chức sự kiện và teambuilding (Hải Âu, Gloden Dream, RI events, Hòa Bình events, công ty tổ chức sự kiện DCT,…)</span></span></p> <p class=\"MsoNormal\" style=\"margin-top: 4.0pt; text-align: justify;\"><span lang=\"EN-US\" style=\"font-family: Arial;\">- Nhân viên lễ tân cho các doanh nghiệp (tập đoàn Vingroup, Sungroup, Victoria..)</span></p>]]></string>
    <string name="question2">Học phí ngành Sư phạm?</string>
    <string name="question2_answer">Miễn học phí.</string>
    <string name="question1">Hồ sơ học bạ có cần công chứng không?</string>
    <string name="question1_answer">Không cần.</string>
    <string name="question3">Xét học bạ vào sư phạm?</string>
    <string name="question3_answer"><![CDATA[<span style=\"color: #008BD6\">Mời bạn xem thông tin tại</span><br><i><span style=\"color: #ee82ee\">https://tuyensinh.ctu.edu.vn/phuong-thuc-xet-tuyen/947-phuong-thuc-6.html</span></i>]]></string>
</resources>