<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VNHFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_vnh"
            android:layout_marginBottom="@dimen/text_margin"
            android:textStyle="bold"
            android:textColor="#D64910"
            android:textSize="25sp"
            android:id="@+id/txt_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thong tin chung"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/txt_thongtinchung" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thongtinchung_vnh"
            android:id="@+id/txt_noidung_thongtinchung" />
        <WebView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/webview_video"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gioi thieu"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/txt_gioithieu" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gioithieu_vnh"
            android:id="@+id/txt_noidung_gioithieu" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vi tri viec lam"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/txt_vitrivieclam" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vitrivieclam_vnh"
            android:id="@+id/txt_noidung_vitrivieclam" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Noi lam viec"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/txt_noilamviec" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noilamviec_vnh"
            android:id="@+id/txt_noidung_noilamviec" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chuandaura"
            android:id="@+id/txt_chuandaura"
            android:textStyle="italic"
            android:textColor="#C54E00"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>