<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.QuestionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/text_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6EDFF">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/question_layout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cau1"
                    android:text="@string/question1_answer"
                    android:layout_marginStart="20dp"
                    android:textStyle="italic"
                    android:textColor="#008BD6"/>
            </LinearLayout>
            <CheckBox
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:clickable="true"
                android:button="@null"
                android:background="@drawable/expand_collapse_selector"
                android:layout_alignParentEnd="true"
                android:id="@+id/mark"
                android:focusable="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6EDFF"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/question_layout_2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cau2"
                    android:text="@string/question2_answer"
                    android:layout_marginStart="20dp"
                    android:textStyle="italic"
                    android:textColor="#008BD6"/>
            </LinearLayout>
            <CheckBox
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:clickable="true"
                android:button="@null"
                android:background="@drawable/expand_collapse_selector"
                android:layout_alignParentEnd="true"
                android:id="@+id/mark2"
                android:focusable="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6EDFF"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/question_layout_3">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cau3"
                    android:text="@string/question3_answer"
                    android:layout_marginStart="20dp"
                    android:textStyle="italic" />
            </LinearLayout>
            <CheckBox
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:clickable="true"
                android:button="@null"
                android:background="@drawable/expand_collapse_selector"
                android:layout_alignParentEnd="true"
                android:id="@+id/mark3"
                android:focusable="true" />
        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>